--- a/app/src/main/res/layout/activity_carrello.xml
+++ b/app/src/main/res/layout/activity_carrello.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/carrelloLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/brick_red"
@@ -23,20 +24,9 @@
         android:id="@+id/recyclerViewOrderSummary"
         android:layout_width="370dp"
         android:layout_height="570dp"
-        android:layout_below="@id/textViewOrderSummary"
         android:layout_above="@id/paymentButton"
+        android:layout_below="@id/textViewOrderSummary"
         android:layout_centerInParent="true" />
-
-
-    <TextView
-        android:id="@+id/finalTotal"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="TOT:"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:layout_alignParentBottom="true"/>
 
 
     <TextView
@@ -44,22 +34,36 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/finalTotal"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp"
         android:text="50"
-        android:textColor="@color/white"
-        android:textSize="40sp"
         android:textAlignment="center"
-        android:layout_marginBottom="2sp"/>
+        android:textColor="@color/white"
+        android:textSize="40sp" />
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/paymentButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
         android:clickable="true"
         android:contentDescription="@string/payment_button"
         app:srcCompat="@drawable/dollaricon" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/impostazioniPulsanteCarrello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_preferences" />
 
 </RelativeLayout>
