--- a/app/src/main/res/layout/activity_drink.xml
+++ b/app/src/main/res/layout/activity_drink.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drinkLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/brick_red"
@@ -20,33 +21,47 @@
         android:layout_height="40dp"
         android:layout_below="@id/searchView"
         android:layout_marginBottom="1dp"
-        android:tooltipText="Filters"
-        android:spinnerMode="dropdown"
         android:background="@drawable/rectangle_spinner"
-        android:popupBackground="@drawable/rectangle_spinner" />
+        android:popupBackground="@drawable/rectangle_spinner"
+        android:spinnerMode="dropdown"
+        android:tooltipText="Filters" />
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:fontFamily="@font/calistoga"
         android:text="@string/drink_activity_select_your_favourite_drinks"
-        android:textSize="30sp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:fontFamily="@font/calistoga"/>
+        android:textSize="30sp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/goToCartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:clickable="true"
         app:srcCompat="@drawable/shoppingcarticon" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/impostazioniPulsanteDrink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_preferences" />
+
 </RelativeLayout>
 
