--- a/app/src/main/res/layout/activity_pagamento.xml
+++ b/app/src/main/res/layout/activity_pagamento.xml
@@ -15,10 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/calistoga"
-        android:text="Per piacere inserisci i dati della tua carta di credito"
         android:textAlignment="center"
-        android:textColor="@color/white"
         android:textSize="30sp"
+        android:text="@string/titolo_pagamento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +89,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/confermaDati"
+        android:id="@+id/pulsanteConfermaDati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/cvvCarta"
@@ -107,8 +106,8 @@
         android:layout_below="@id/cognomeProprietarioCarta"
         android:layout_alignStart="@id/numeroCarta"
         android:layout_marginTop="40sp"
-        android:background="@color/sky_blue"
-        android:prompt="@string/select_month"
+        android:background="@drawable/rectangle_spinner"
+        android:prompt="@string/mesi_spinner"
         android:spinnerMode="dropdown" />
 
 
@@ -120,7 +119,8 @@
         android:layout_marginLeft="5sp"
         android:layout_marginTop="40sp"
         android:layout_toEndOf="@id/meseScadenza"
-        android:background="@color/sky_blue"
+        android:prompt="@string/anni_spinner"
+        android:background="@drawable/rectangle_spinner"
         android:spinnerMode="dropdown" />
 
 
@@ -133,4 +133,14 @@
         android:layout_marginTop="10sp"
         android:text="Scadenza"
         android:textColor="@color/white" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/impostazionePulsantePagamento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_preferences"
+        android:layout_alignTop="@id/pulsanteConfermaDati"
+        android:layout_alignStart="@id/meseScadenza"/>
 </RelativeLayout>
